syntax = "proto3";

package inf.survey;
option go_package = "github.com/influenzanet/study-service/pkg/api";

import "api/expression.proto";
import "api/survey-response.proto";

message SurveyContext {
  string mode = 1;
  repeated inf.survey_response.SurveyResponse previous_responses = 2;
}

// expression that define how the survey context should be generated by the
// server
message SurveyContextDef {
  inf.expressions.ExpressionArg mode = 3;
  repeated inf.expressions.Expression previous_responses = 4;
}

message Survey {
  string id = 1;
  repeated LocalisedObject name = 2;
  SurveyVersion current = 3;
  repeated SurveyVersion history = 4;
  repeated LocalisedObject description = 5;
  repeated inf.expressions.Expression prefill_rules = 6;
  SurveyContextDef context_rules = 7;
  MaxItemsPerPage max_items_per_page = 8;
}

message MaxItemsPerPage {
  int32 large = 1;
  int32 small = 2;
}

message SurveyVersion {
  int64 published = 1;
  int64 unpublished = 2;
  SurveyItem survey_definition = 3;
}

message SurveyItem {
  string id = 1;
  string key = 2;
  repeated string follows = 3;
  inf.expressions.Expression condition = 4;
  float priority = 5;
  int32 version = 6;
  repeated string version_tags = 7;
  // Question group attributes ->
  repeated SurveyItem items = 8;
  inf.expressions.Expression selection_method = 9;
  // Question attributes ->
  string type = 10;              // item/question type
  ItemComponent components = 11; // is a group component
  repeated Validation validations = 12;
}

message Validation {
  string key = 1;
  string type = 2; // hard or softvalidation
  inf.expressions.Expression rule = 3;
}

message ItemComponent {
  string role = 1;
  string key = 2;
  repeated LocalisedObject content = 3;
  inf.expressions.Expression display_condition = 4;
  inf.expressions.Expression disabled = 5;

  // group component
  repeated ItemComponent items = 6;
  inf.expressions.Expression order = 7;

  // response compontent
  string dtype = 8;

  message Style {
    string key = 1;
    string value = 2;
  }
  repeated Style style = 9;

  repeated LocalisedObject description = 10;

  message Properties {
    inf.expressions.ExpressionArg min = 1;
    inf.expressions.ExpressionArg max = 2;
    inf.expressions.ExpressionArg stepSize = 3;
    inf.expressions.ExpressionArg dateInputMode = 4;
  }
  Properties properties = 11;
}

message LocalisedObject {
  string code = 1; // locale code

  // for texts:
  repeated inf.expressions.ExpressionArg parts = 2;
}